force-app/main/default/objects/MJAuth__mdt/MJAuth__mdt.object-meta.xml
<CustomObject>
    <description>Contains MortgageJunction Authentication and Tokens</description>
    <label>MJ Auth</label>
    <pluralLabel>MJ Auths</pluralLabel>
</CustomObject>