force-app/main/default/objects/MJAuth__mdt/fields/Access_Token__c.field-meta.xml
<CustomField>
    <fullName>Access_Token__c</fullName>
    <description>MortgageJunction Authentication Access Token</description>
    <inlineHelpText>MortgageJunction Authentication Access Token</inlineHelpText>
    <label>Access Token</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>