force-app/main/default/objects/MJAuth__mdt/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <description>MortgageJunction Authentication Password</description>
    <inlineHelpText>MortgageJunction Authentication Password</inlineHelpText>
    <label>Password</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>