force-app/main/default/objects/MJAuth__mdt/fields/Token_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Token_Expiry__c</fullName>
    <description>MortgageJunction Authentication Token Expiry</description>
    <inlineHelpText>MortgageJunction Authentication Token Expiry</inlineHelpText>
    <label>Token Expiry</label>
    <type>DateTime</type>
</CustomField>