force-app/main/default/objects/MJAuth__mdt/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <description>MortgageJunction Authentication Username</description>
    <inlineHelpText>MortgageJunction Authentication Username</inlineHelpText>
    <label>Username</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>